--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,71 @@
+/* font-family: 'Roboto', sans-serif;
+font-family: 'Hepta Slab', serif; */
+
+@import url('https://fonts.googleapis.com/css?family=Hepta+Slab|Roboto&display=swap');
 
 body{
+    background-color: #ffffff;
+    color: #000000;
+}
+.split{
+    height: 100%;
+    width:50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+}
+/* left side css */
+.left{
+    left: 0;
+    background-color: #1394f6;
+}
+.left .centered h1 .Weathercolor{
+    color: #ffffff
+}
+.left .centered h1{
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+/* right side css */
+.right{
+    right: 0;
+    background-color: #fafafa;
+    
+}
+.right .weathercontainer{
+    padding-top: 4em;
+    padding-left: 5em;
+}
 
+.right .weathercontainer .weatherdetails{
+    font-family: sans-serif;
+    font-size: 1.5em;
+}
+
+.right .weathercontainer .linespace{
+    margin-top:-15px; 
+}
+.right .centered{
+    padding-top: 20%;
+    padding-left: 5em;
+}
+.inputsize{
+    width: 50%
+}
+.temperature{
+    font-family: sans-serif;
+    /* font-size: 3em; */
+}
+.sign a{
+    text-decoration: none;
+}
+.sign{
+    font-size: 0.3em;
 }
