--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,17 @@ body{
     width: 50%
 }
 .temperature{
+    margin-top: 1em;
     font-family: sans-serif;
-    /* font-size: 3em; */
+    font-size: 3em;
 }
 .sign a{
     text-decoration: none;
 }
 .sign{
     font-size: 0.3em;
+}
+
+.sign a:hover{
+    color:#1394f6;
 }
