--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-/* font-family: 'Roboto', sans-serif;
-font-family: 'Hepta Slab', serif; */
+/*   Project Name: Weather app 
+     Description: This application display's weather details of a particular city when selected
+     language: HTMl,CSS,JS
+     Author: Shaik Mudassir
+     font-family: 'Roboto', sans-serif;
+     font-family: 'Hepta Slab', serif; 
+*/
 
 @import url('https://fonts.googleapis.com/css?family=Hepta+Slab|Roboto&display=swap');
 
