--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
      Description: This application display's weather details of a particular city when selected
      language: HTMl,CSS,JS
      Author: Shaik Mudassir
+     Github: https://github.com/shaik80
      font-family: 'Roboto', sans-serif;
      font-family: 'Hepta Slab', serif; 
 */
